
    o	eval() could alter a data.frame/list second argument, so
	with(trees, Girth[1] < NA) altered 'trees' (and any copy of
	'trees' too).

    o	cor() could corrupt memory when the standard deviation was
	zero. (PR#7037)

    o	inverse.gaussian() always printed 1/mu^2 as the link function.

    o   constrOptim now passes ... arguments through optim to the
        objective function



	**************************************************
	*						 *
	*	       1.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.9.1 Patched


INSTALLATION ISSUES

    o	Installation will now work even in Norwegian and Danish locales
	which sort AA at the end (for package stats4 which has AAA.R).


BUG FIXES

    o	Various memory leaks have been plugged and uses of strcpy()
	with overlapping src and dest corrected.

    o	R CMD INSTALL now also works for /bin/sh's such as the one from
	Solaris 8 which fail when a function has the same name as a variable.

    o	The Date method for trunc() failed.

    o	window() failed if both start and end were outside the time
	range of the original series (possible if extend = TRUE).

    o	coplot(..) doesn't give an extraneous warning anymore when called
	on a fresh device.

    o	hasArg() used wrong logic to get the parent function. (sys.function()
	behaves differently from what is documented.

    o	prompt(f) now gives proper \usage{..} for
	f <- function(x, g = function(u) { v <- u^2 ; sin(v)/v }) { g(x) }

    o	package.skeleton() now uses the supplied name in the DESCRIPTION
	file.

    o	options(list('digits', 'scipen')) no longer seg.faults (PR#7078).

    o	summary.Date() now has a sensible default for 'digits'.

    o	list.files(all.files = TRUE, recursive = TRUE) died on infinite
	recursion. (PR#7100)

    o	cor(as.array(c(a=1,b=2)), cbind(1:2)) no longer seg.faults (PR#7116).
	cor(), cov() and var() no longer accidentally work with list()
	arguments as if they were unlist()ed.
